# StairDetection

./: README.md
docs/: system_overview.md
staircase_msgs/: CMakeLists.txt
staircase_perception/: CMakeLists.txt
staircase_perception/config/: unified_estimation_config.yaml
staircase_perception/include/staircase_perception/core/: multi_stair_manager.hpp  stair_detector.hpp  staircase_model.hpp
staircase_perception/include/staircase_perception/ros2/: staircase_estimation_robot_node.hpp
staircase_perception/include/staircase_perception/utils/: stair_utilities.hpp
staircase_perception/launch/: staircase_robot_nodes.launch.py
staircase_perception/scripts/: pointcloud_registration_node.py
staircase_perception/src/core/: multi_stair_manager.cpp  stair_detector.cpp  staircase_model.cpp
staircase_perception/src/ros2/: staircase_estimation_robot_node.cpp
staircase_perception/staircase_perception/: stair_visualization.py
